# mgr-

./: CMakeLists.txt
include/mgr++/: MatIO.h
matlab/: calcE.m  calcE.m~  calcX.m  data.m  data.m~
src/: Backward.cpp
test/: CMakeLists.txt  testSubsetSum.cpp
